andres/force-app/main/default/objects/Open_Position__c/Open_Position__c.object-meta.xml
<CustomObject>
    <description>Job Positions that need to be filled</description>
    <label>Open Position</label>
    <nameField>
        <displayFormat>Job Opening-{0000}</displayFormat>
        <label>Job Opening</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>