andres/force-app/main/default/objects/Open_Position__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>