andres/force-app/main/default/objects/Open_Position__c/fields/salary__c.field-meta.xml
<CustomField>
    <fullName>salary__c</fullName>
    <label>salary</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>